# Dungeoner-on-QT

./: README.md
Dungeoner/: CMakeLists.txt  CMakeLists.txt.user.cafd554  dungeoner.cpp  dungeoner.h  dungeoner.ui  main.cpp
Dungeoner/CustomWidget/LabelWithTooltip/: labelwithtooltip.cpp  labelwithtooltip.h  labelwithtooltip.ui  stylemaster.cpp  stylemaster.h
Dungeoner/CustomWidget/PrimarySkillSignature/: primaryskillsignature.cpp  primaryskillsignature.h  primaryskillsignature.ui  stylemaster.cpp  stylemaster.h
Dungeoner/CustomWidget/SecondarySkill/: secondaryskill.ui  stylemaster.h
Dungeoner/CustomWidget/WindowBorder_1/: stylemaster.cpp  stylemaster.h  windowborder_1.cpp  windowborder_1.h  windowborder_1.ui
Dungeoner/CustomWidgets/CharacterEquipment/: characterequipment.cpp  characterequipment.h  characterequipment.ui
Dungeoner/CustomWidgets/FPS_Counter/: fps_counter.cpp  fps_counter.h  fps_counter.ui
Dungeoner/CustomWidgets/Inventories/AbstractInventory/: abstractinventory.cpp  abstractinventory.h
Dungeoner/CustomWidgets/Inventories/CharacterWindowInventory/: characterwindowinventory.cpp  characterwindowinventory.h  characterwindowinventory.ui
Dungeoner/CustomWidgets/InventoryCell/: IC_stylemaster.cpp  IC_stylemaster.h  inventorycell.cpp  inventorycell.h  inventorycell.ui
Dungeoner/CustomWidgets/InventoryItem/: II_stylemaster.cpp  II_stylemaster.h  inventoryitem.cpp  inventoryitem.h  inventoryitem.ui
Dungeoner/CustomWidgets/Item/: I_stylemaster.cpp  I_stylemaster.h  item.cpp  item.h  item.ui  itemmimedata.cpp  itemmimedata.h
Dungeoner/CustomWidgets/LabelWithBorder/: labelwithborder.cpp  labelwithborder.h  labelwithborder.ui  stylemaster.cpp  stylemaster.h
Dungeoner/CustomWidgets/LabelWithTooltip/: LWT_stylemaster.cpp  LWT_stylemaster.h  labelwithtooltip.cpp  labelwithtooltip.h  labelwithtooltip.ui  stylemaster.cpp  stylemaster.h
Dungeoner/CustomWidgets/MagicDefenseProgressBar/: MDP_stylemaster.cpp  MDP_stylemaster.h  magicdefenseprogressbar.cpp  magicdefenseprogressbar.h  magicdefenseprogressbar.ui
Dungeoner/CustomWidgets/OpenworkButton/: OB_stylemaster.cpp  OB_stylemaster.h  openworkbutton.cpp  openworkbutton.h  openworkbutton.ui
Dungeoner/CustomWidgets/ParagraphWithBorder/: paragraphwithborder.cpp  paragraphwithborder.h  paragraphwithborder.ui
Dungeoner/CustomWidgets/PrimarySkill/: PS_stylemaster.cpp  PS_stylemaster.h  primaryskill.cpp  primaryskill.h  primaryskill.ui
Dungeoner/CustomWidgets/PrimarySkillSignature/: PSS_stylemaster.cpp  PSS_stylemaster.h  primaryskillsignature.cpp  primaryskillsignature.h  primaryskillsignature.ui  stylemaster.cpp  stylemaster.h
Dungeoner/CustomWidgets/ProgressBar_1/: PB1_stylemaster.cpp  PB1_stylemaster.h  progressbar_1.cpp  progressbar_1.h  progressbar_1.ui  stylemaster.cpp  stylemaster.h
Dungeoner/CustomWidgets/ProgressBar_2/: PB2_stylemaster.cpp  PB2_stylemaster.h  chunk.cpp  chunk.h  progressbar_2.cpp  progressbar_2.h  progressbar_2.ui
Dungeoner/CustomWidgets/SecondarySkill/: SS_stylemaster.cpp  SS_stylemaster.h  secondaryskill.cpp  secondaryskill.h  secondaryskill.ui  stylemaster.cpp  stylemaster.h
Dungeoner/CustomWidgets/SecondarySkillProgressBar/: SSPB_stylemaster.cpp  SSPB_stylemaster.h  secondaryskillprogressbar.cpp  secondaryskillprogressbar.h  secondaryskillprogressbar.ui
Dungeoner/CustomWidgets/Tooltip/: T_stylemaster.cpp  T_stylemaster.h  tooltip.cpp  tooltip.h  tooltip.ui
Dungeoner/CustomWidgets/WeaponGripButton/: WGB_stylemaster.cpp  WGB_stylemaster.h  weapongripbutton.cpp  weapongripbutton.h  weapongripbutton.ui
Dungeoner/CustomWidgets/WindowBorder_1/: WB1_stylemaster.cpp  WB1_stylemaster.h  stylemaster.cpp  stylemaster.h  windowborder_1.cpp  windowborder_1.h  windowborder_1.ui
Dungeoner/CustomWidgets/WindowBorder_2/: WB2_stylemaster.cpp  WB2_stylemaster.h  windowborder_2.cpp  windowborder_2.h  windowborder_2.ui
Dungeoner/CustomWidgets/WindowBorder_3/: WB3_stylemaster.cpp  WB3_stylemaster.h  windowborder_3.cpp  windowborder_3.h  windowborder_3.ui
Dungeoner/Global/: global.cpp  global.h  globalstylemaster.cpp  globalstylemaster.h
Dungeoner/MediaPlayer/: mediaplayer.cpp  mediaplayer.h
Dungeoner/Person/: person.cpp  person.h
Dungeoner/Person/MagicDefense/: chunk.cpp  chunk.h  magicdefense.cpp  magicdefense.h  magicdefensebonus.cpp  magicdefensebonus.h
Dungeoner/Person/SecondaryStat/: secondarystat.cpp  secondarystat.h
Dungeoner/Person/Stat/: bonus.cpp  bonus.h  stat.cpp  stat.h
Dungeoner/Resources/: Fonts.qrc  Gifs.qrc  Sounds.qrc  Textures.qrc
Dungeoner/Resources/Fonts/: description
Dungeoner/System/OutlineEffect/: outlineeffect.cpp  outlineeffect.h
Dungeoner/System/TooltipDisplayEvents/: tooltipdisplayevents.cpp  tooltipdisplayevents.h
Dungeoner/System/UnitTests/SecondarySkillsTest/: secondarySkillsTest.cpp  secondarySkillsTest.h
Dungeoner/Windows/CharacterWindow/: CW_stylemaster.cpp  CW_stylemaster.h  characterwindow.cpp  characterwindow.h  characterwindow.ui  stylemaster.cpp  stylemaster.h
build-Dungeoner-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.restat  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  error log.txt  qtcsettings.cmake
build-Dungeoner-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Dungeoner-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Dungeoner-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/Dungeoner_autogen/: deps  mocs_compilation.cpp
build-Dungeoner-Desktop_Qt_6_3_1_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Dungeoner-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.recompact  .ninja_log.restat  CMakeCache.txt  CMakeCache.txt.prev  CTestTestfile.cmake  build.ninja  cmake_install.cmake  error log.txt  qtcsettings.cmake
build-Dungeoner-Desktop_Qt_6_3_2_MinGW_64_bit-MinSizeRel/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  error log.txt  qtcsettings.cmake
(+3174 files in other folders)
